Fix Modal position
add menu Header


Fix Modal position 


Fix menu position when  off-screen

--- a/ui/src/components/SampleView/SampleView.css
+++ b/ui/src/components/SampleView/SampleView.css
@@ -131,10 +131,6 @@
 }
 
 
-.modal-header {
-    border-bottom: 1px solid #e5e5e5;
-}
-
 .sample-control.active{
     color: orange !important;
     background-color: transparent !important;
